--- a/front/src/components/form/Form.css
+++ b/front/src/components/form/Form.css
@@ -1,9 +1,12 @@
-/* Form.css */
 body,
 html {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+}
+
+.text {
+  font-family: "Rubik Doodle Shadow", system-ui;
+  color: black;
 }
 
 .login-container {
@@ -13,7 +16,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(C:\Users\Joel\Desktop\Soy Henry\Modulo 2\PI-ejoelf\front\src\assets\img\Rick&Morty_Form.jpeg);
+  background-image: url(C:\Users\Joel\Desktop\Soy Henry\Modulo 2\PI-ejoelf\front\src\assets\img\prueba2.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -25,7 +28,7 @@ html {
   border-radius: 10px;
   backdrop-filter: blur(20px);
   z-index: 99;
-  padding: 2rem;
+  padding: 3.5rem;
 }
 
 .login-container form {
@@ -44,9 +47,9 @@ html {
   padding: 14.5px;
   width: 100%;
   margin: 10px 0;
-  color: #333;
+  color: black;
   outline: none;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: transparent;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-weight: 500;
@@ -59,7 +62,7 @@ html {
 }
 
 .login-container form button {
-  background-color: #007bff;
+  background-color: green;
   color: #fff;
   display: block;
   padding: 13px;
@@ -76,7 +79,7 @@ html {
 }
 
 .login-container form button:hover {
-  background-color: #0056b3;
+  background-color: green;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.15);
   transform: scale(1.02);
 }
