--- a/front/src/components/cards/cards.css
+++ b/front/src/components/cards/cards.css
@@ -1,9 +1,3 @@
-body,
-html {
-  margin: 0;
-  padding: 0;
-}
-
 .cards-container {
   display: flex;
   flex-wrap: wrap;
@@ -12,7 +6,7 @@ html {
   min-height: 100vh;
   margin: 0;
   padding: 20px;
-  background-image: url(C:\Users\Joel\Desktop\Soy Henry\Modulo 2\PI-ejoelf\front\src\assets\img\todapantalla.jpeg);
+  background-image: url("C:\Users\Joel\Desktop\Soy Henry\Modulo 2\PI-ejoelf\front\src\assets\img\cards.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -31,9 +25,4 @@ html {
 .card h2 {
   font-size: 18px;
   margin-bottom: 10px;
-}
-
-.card p {
-  font-size: 14px;
-  color: #555;
 }
