--- a/front/src/components/searchBar/searchBar.css
+++ b/front/src/components/searchBar/searchBar.css
@@ -1,13 +1,29 @@
-nav {
+.search-bar {
   display: flex;
-  justify-content: space-between;
+  margin-left: auto;
   align-items: center;
-  padding: 10px;
-  background-color: #181717;
-  color: white;
 }
 
-nav button {
+.search-bar input {
+  padding: 0.5em;
+  margin-right: 2em;
+  display: block;
+  width: 100%;
+  color: white;
+  outline: none;
+  background-color: transparent;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-weight: 500;
+  letter-spacing: 0.8px;
+  font-size: 15px;
+}
+
+.search-bar input:focus {
+  box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.2);
+}
+
+.search-bar button {
   padding: 0.5em;
   color: white;
   border-radius: 5px;
@@ -23,17 +39,8 @@ nav button {
   border: none;
 }
 
-nav button:hover {
+.search-bar button:hover {
   background-color: green;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.15);
   transform: scale(1.02);
-}
-
-nav a {
-  text-decoration: none;
-  color: white;
-  margin: 0 10px;
-  padding: 8px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease-in-out;
 }
