--- a/front/src/components/card/card.css
+++ b/front/src/components/card/card.css
@@ -1,4 +1,5 @@
 .card-container {
+  background-color: #888;
   border: 1px solid #ccc;
   border-radius: 8px;
   margin: 10px;
@@ -37,10 +38,10 @@
 
 .card-close {
   cursor: pointer;
-  color: #888;
+  color: #f50909;
   font-size: 20px;
 }
 
 .card-close:hover {
-  color: #555;
+  color: #f00101;
 }
