--- a/front/src/components/cards/cards.css
+++ b/front/src/components/cards/cards.css
@@ -1,12 +1,11 @@
 .cards-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  margin: 0;
-  padding: 20px;
-  background-image: url("C:\Users\Joel\Desktop\Soy Henry\Modulo 2\PI-ejoelf\front\src\assets\img\cards.jpeg");
+  background-image: url("../../assets/img/cards.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -23,6 +22,8 @@
 }
 
 .card h2 {
+  font-family: "Rubik Doodle Shadow", system-ui;
   font-size: 18px;
   margin-bottom: 10px;
+  color: green;
 }
