--- a/front/src/components/error/error.css
+++ b/front/src/components/error/error.css
@@ -1,21 +1,13 @@
-.error-container {
+div {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
 }
 
-.error-image {
+img {
   width: 100%;
-  max-width: 500px; /* Ajusta el tamaño máximo según tus preferencias */
-  animation: fadeIn 1s ease-in; /* Agrega una animación de fadeIn si lo deseas */
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+  height: auto;
+  max-height: 70vh;
 }
