--- a/front/src/components/card/card.css
+++ b/front/src/components/card/card.css
@@ -1,7 +1,89 @@
 .card {
+  width: 270px;
+  height: 380px;
   position: relative;
+  perspective: 1000px;
+  font-family: Verdana, sans-serif;
+  border-radius: 10px;
+  margin: 10px;
+  overflow: hidden;
+}
+
+/* .face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
+  padding: 20px;
+  box-shadow: 5px 5px 5px #aaa;
+  transition: transform 0.5s linear; 
 }
+
+.back {
+  overflow: hidden;
+  transform: rotateY(180deg);
+  box-sizing: border-box;
+  background-color: yellow; 
+}
+
+.front {
+  background-color: aqua; 
+  z-index: 1;
+}
+
+.hovercard:hover .face {
+  transform: rotateY(
+    180deg
+  ); 
+} */
+
+/* .close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  color: whitesmoke;
+}
+
+.card-image {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.back ul {
+  list-style: none;
+  padding: 0;
+}
+
+.back li {
+  margin-top: 15px;
+  color: whitesmoke;
+}
+
+.favorite-btn {
+  align-self: flex-end;
+  font-size: 20px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  color: whitesmoke;
+}
+
+.details-btn {
+  align-self: center;
+  margin-top: 10px;
+  padding: 5px 10px;
+  cursor: pointer;
+  background-color: #4caf50;
+  color: whitesmoke;
+  border: none;
+  border-radius: 5px;
+} */
