--- a/front/src/components/about/about.css
+++ b/front/src/components/about/about.css
@@ -2,15 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
   width: 300px;
   height: 400px;
-  background: #fff;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.1);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(15px);
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 15px 25px rgb(58, 226, 20);
 }
 
 .img-bx {
@@ -35,7 +31,6 @@
 }
 
 .content {
-  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
@@ -60,13 +55,13 @@
 
 .content .detail h2 span {
   font-size: 0.7em;
-  color: green;
+  color: rgb(19, 203, 19);
   font-weight: bold;
 }
 
 .sci {
-  position: relative;
   display: flex;
+  justify-content: space-between;
   margin-top: 5px;
 }
 
@@ -91,6 +86,6 @@
 }
 
 .sci li a:hover {
-  background: green;
+  background: rgb(16, 206, 16);
   color: #fff;
 }
