--- a/front/src/components/nav/nav.css
+++ b/front/src/components/nav/nav.css
@@ -28,7 +28,7 @@ nav button {
 }
 
 nav button:hover {
-  background-color: green;
+  background-color: rgb(16, 194, 16);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.15);
   transform: scale(1.02);
 }
