--- a/front/src/components/searchBar/searchBar.css
+++ b/front/src/components/searchBar/searchBar.css
@@ -25,7 +25,7 @@
   color: white;
   border-radius: 5px;
   cursor: pointer;
-  background-color: green;
+  background-color: rgb(42, 110, 42);
   outline: none;
   font-size: 16px;
   letter-spacing: 1.5px;
@@ -35,7 +35,7 @@
 }
 
 .search-bar button:hover {
-  background-color: green;
+  background-color: rgb(16, 194, 16);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.15);
   transform: scale(1.02);
 }
