--- a/Client/src/components/about/about.css
+++ b/Client/src/components/about/about.css
@@ -1,91 +1,10 @@
-.card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height: 400px;
-  border-radius: 10px;
-  backdrop-filter: blur(15px);
-  box-shadow: 0 15px 25px rgb(58, 226, 20);
-}
-
-.img-bx {
-  position: absolute;
-  top: 0;
-  left: 0;
+.container {
+  position: relative;
   width: 100%;
-  height: 100%;
-  border-radius: 10px;
+  height: 100vh;
+  background-image: url("../../assets/img/about.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   overflow: hidden;
-  transform: translateY(30px) scale(0.5);
-  transform-origin: top;
-}
-
-.img-bx img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.content {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  padding-bottom: 30px;
-}
-
-.content .detail {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-.content .detail h2 {
-  color: #444;
-  font-size: 1.6em;
-  font-weight: bolder;
-}
-
-.content .detail h2 span {
-  font-size: 0.7em;
-  color: rgb(19, 203, 19);
-  font-weight: bold;
-}
-
-.sci {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5px;
-}
-
-.sci li {
-  list-style: none;
-  margin: 4px;
-}
-
-.sci li a {
-  width: 45px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  background: transparent;
-  font-size: 1.5em;
-  color: #444;
-  text-decoration: none;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  transition: 0.5s;
-}
-
-.sci li a:hover {
-  background: rgb(16, 206, 16);
-  color: #fff;
 }
