--- a/Client/src/components/favourites/favourite.css
+++ b/Client/src/components/favourites/favourite.css
@@ -1,5 +1,4 @@
-.container {
-  position: relative;
+.containerFavorite {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -9,4 +8,18 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.barraFavoritos {
+  margin-top: 20px;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.barraFavoritos select {
+  margin-right: 10px;
+  padding: 8px;
 }
