--- a/Client/src/components/favourites/favourite.css
+++ b/Client/src/components/favourites/favourite.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("../../assets/img/favorites.jpeg");
+  background-image: url("../../assets/img/detail-favorites.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
