--- a/Client/src/components/card/card.css
+++ b/Client/src/components/card/card.css
@@ -1,89 +1,44 @@
-.card {
-  width: 270px;
-  height: 380px;
-  position: relative;
-  perspective: 1000px;
-  font-family: Verdana, sans-serif;
-  border-radius: 10px;
-  margin: 10px;
-  overflow: hidden;
-}
-
-/* .face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.card-container {
+  background-color: black;
+  max-width: 400px;
+  margin: 0 auto;
   padding: 20px;
-  box-shadow: 5px 5px 5px #aaa;
-  transition: transform 0.5s linear; 
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+}
+.card-container:hover {
+  box-shadow: 0 0 16px 1px rgba(255, 255, 255, 0.559);
 }
 
-.back {
-  overflow: hidden;
-  transform: rotateY(180deg);
-  box-sizing: border-box;
-  background-color: yellow; 
+.fav-close {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.front {
-  background-color: aqua; 
-  z-index: 1;
-}
-
-.hovercard:hover .face {
-  transform: rotateY(
-    180deg
-  ); 
-} */
-
-/* .close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+button {
   font-size: 20px;
   cursor: pointer;
-  background: none;
   border: none;
-  color: whitesmoke;
+  background: none;
+  outline: none;
+}
+
+.link-name {
+  text-decoration: none;
+}
+
+.link-name h2 {
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
 }
 
 .card-image {
   width: 100%;
-  height: auto;
-  border-radius: 10px;
+  height: 100%;
+  object-fit: cover;
+  object-position: 0 50%;
 }
-
-.back ul {
-  list-style: none;
-  padding: 0;
-}
-
-.back li {
-  margin-top: 15px;
-  color: whitesmoke;
-}
-
-.favorite-btn {
-  align-self: flex-end;
-  font-size: 20px;
-  cursor: pointer;
-  background: none;
-  border: none;
-  color: whitesmoke;
-}
-
-.details-btn {
-  align-self: center;
-  margin-top: 10px;
-  padding: 5px 10px;
-  cursor: pointer;
-  background-color: #4caf50;
-  color: whitesmoke;
-  border: none;
-  border-radius: 5px;
-} */
