--- a/Client/src/components/form/Form.css
+++ b/Client/src/components/form/Form.css
@@ -5,45 +5,46 @@ html {
 }
 
 .text {
-  font-family: "Rubik Doodle Shadow", system-ui;
+  text-align: center;
+  font-family: "Rubik Doodle Shadow";
   color: black;
 }
 
 .login-container {
-  position: relative;
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("../../assets/img/form.jpeg");
+  background-image: url("../../assets/img/form2.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .form-container {
-  border: 1px solid hsla(0, 0%, 65%, 0.158);
-  box-shadow: 0 0 36px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 36px 1px rgba(0, 0, 0, 0.8);
   border-radius: 10px;
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(3px);
   z-index: 99;
-  padding: 3.5rem;
+  padding: 60px;
 }
 
-.login-container form {
+.login {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.login-container form label {
-  font-size: 18px;
+.label {
+  font-family: "Rubik Doodle Shadow";
+  font-weight: bold;
+  font-size: 20px;
   color: black;
   margin-bottom: 10px;
 }
 
-.login-container form input {
+.input {
   display: block;
   padding: 14.5px;
   width: 100%;
@@ -51,20 +52,27 @@ html {
   color: black;
   outline: none;
   background-color: transparent;
-  border: 1px solid #ccc;
+  box-shadow: 0 0 10px 1px black;
+  border: none;
   border-radius: 5px;
   font-weight: 500;
   letter-spacing: 0.8px;
   font-size: 15px;
 }
 
-.login-container form input:focus {
-  box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.2);
+.input:focus {
+  box-shadow: 0 0 20px 1px black;
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.1);
 }
 
-.login-container form button {
+.input::placeholder {
+  color: black;
+}
+
+.boton {
   background-color: green;
-  color: #fff;
+  color: white;
   display: block;
   padding: 13px;
   border-radius: 5px;
@@ -74,22 +82,20 @@ html {
   font-weight: bold;
   width: 100%;
   cursor: pointer;
-  margin-top: 20px;
+  box-shadow: 0 0 10px 1px black;
   transition: all 0.3s ease-in-out;
-  border: none;
+  opacity: 0.8;
 }
 
-.login-container form button:hover {
+.boton:hover {
   background-color: green;
-  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.15);
-  transform: scale(1.02);
+  box-shadow: 0 0 20px 1px black;
+  transform: scale(1.1);
 }
 
-.login-container form p {
-  color: #d9534f;
+.error {
+  font-weight: 550;
+  font-size: 20px;
+  color: red;
   margin-top: -10px;
-}
-
-.opacity {
-  opacity: 0.6;
 }
