--- a/Client/src/components/searchBar/searchBar.css
+++ b/Client/src/components/searchBar/searchBar.css
@@ -9,15 +9,21 @@
   color: white;
   outline: none;
   background-color: transparent;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-weight: 500;
+  border: none;
+  font-weight: bold;
+  font-size: 16px;
   letter-spacing: 0.8px;
-  font-size: 15px;
 }
 
 .search-bar input:focus {
-  box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 16px 1px rgba(255, 255, 255, 0.559);
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.1);
+}
+
+.search-bar input::placeholder {
+  color: white;
+  font-weight: bold;
 }
 
 .search-bar button {
@@ -36,6 +42,5 @@
 
 .search-bar button:hover {
   background-color: rgb(16, 194, 16);
-  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.15);
-  transform: scale(1.02);
+  transform: scale(1.2);
 }
