--- a/Client/src/components/favourites/favourite.css
+++ b/Client/src/components/favourites/favourite.css
@@ -1,8 +1,8 @@
 .containerFavorite {
-  width: 100%;
-  height: 100vh;
+  min-width: 100%;
+  min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   background-image: url("../../assets/img/detail-favorites.jpeg");
   background-size: cover;
@@ -11,15 +11,24 @@
 }
 
 .barraFavoritos {
-  margin-top: 20px;
+  width: 100%;
+  display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.7);
   padding: 10px;
   border-radius: 8px;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .barraFavoritos select {
   margin-right: 10px;
   padding: 8px;
+}
+
+.fav-close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
